<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:weightSum="1">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="32sp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@null"
        android:src="@drawable/dot_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_bg"
        android:gravity="center_horizontal"
        android:paddingHorizontal="40dp"
        android:paddingTop="80dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#f00"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/john_smith"
            android:drawableEnd="@drawable/ic_check"
            android:backgroundTint="@color/underline"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_or_gmail"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#f00"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/joydeo_gmail_com"
            android:drawableEnd="@drawable/ic_check"
            android:backgroundTint="@color/underline"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#f00"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
            android:backgroundTint="@color/underline"
            />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#f00"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:id="@+id/confirmPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
            android:backgroundTint="@color/underline"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:background="@drawable/button_bg"
            android:textColor="@color/white"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account"
            android:textAlignment="textEnd"
            android:layout_marginTop="20dp"
            android:textColor="#838383"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Sign In"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>